--- a/src/Components/HomeCardsCont/HomeCardsCont.css
+++ b/src/Components/HomeCardsCont/HomeCardsCont.css
@@ -1,9 +1,11 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .HomeCardsCont{
+    font-family: 'Roboto', sans-serif;
     display: flex;
-    flex-wrap: wrap;
-    gap: 31px;
+    flex-direction: column;
+    /* flex-wrap: wrap;
+    gap: 31px; */
     margin-left:96px;
     margin-top: 100px;
     margin-bottom: 70px;
@@ -13,3 +15,35 @@
     display: flex;
     flex-direction: column;
 } */
+
+.title{
+    display: flex;
+    flex-direction: column;
+
+    width: 300px; 
+    height: auto;
+    margin: 0 auto;
+
+    position: relative;
+    left: -45px;
+
+    margin-bottom: 23px;
+}
+
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 31px;
+}
+
+#t1{
+    color: #848687;
+    font-size: 16px;
+
+}
+
+
+#t2{
+    font-size: 32px;
+
+}
