--- a/src/Components/ShopCard/ShopCard.css
+++ b/src/Components/ShopCard/ShopCard.css
@@ -1,10 +1,11 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 .imgShop{
     width: 264px;
     height: 342px;
-    background-color: #dfe1e0;
+    /* background-color: #dfe1e0; */
+    background-color: #f5f6f8;
     overflow: hidden;
     cursor: pointer;
 }
@@ -104,4 +105,11 @@
    
     
     
+  }
+
+  .cardName{
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
+    margin-top: 18px;
+    margin-bottom: 2px;
   }
