--- a/src/Components/ShopCard/ShopCard.css
+++ b/src/Components/ShopCard/ShopCard.css
@@ -113,3 +113,13 @@
     margin-top: 18px;
     margin-bottom: 2px;
   }
+
+  .cardPrice{
+      display: flex;
+      margin-left: 74px;
+      gap: 21px;
+  }
+
+  #sale{
+      color: #adadad;
+  }
